<resources>
    <string name="app_name">Quiz App</string>
    <string name="submit">Submit</string>
    <string name="question_1">1. Which of the following is an example of a deterministic algorithm??</string>
    <string name="question_2">2. What is the Capital of India?</string>
    <string name="question_3">3. What would you do in PCA to get the same projection as SVD?</string>
    <string name="question_4">4. Who founded Tesla Motors?</string>
    <string name="question_5">5. Which car has a horse on its logo?</string>
    <string name="question_6">6. Population of Earth?</string>
    <string name="trivia">Two Types of Machine Learning?</string>
    <string name="triv">Trivia Question</string>

    <string name="question_1_a1">PCA</string>
    <string name="question_1_a2">K-Means</string>
    <string name="question_1_a3">Regression</string>

    <string name="question_2_a1">Delhi</string>
    <string name="question_2_a2">Chennai</string>
    <string name="question_2_a3">Mumbai</string>

    <string name="question_3_a1">Transform data to zero median</string>
    <string name="question_3_a2">Transform data to zero mean</string>
    <string name="question_3_a3">None of the Aboce</string>

    <string name="question_4_a1">Bill Gates</string>
    <string name="question_4_a2">Elon Musk</string>
    <string name="question_4_a3">Sundar Pichai</string>

    <string name="question_5_a1">Porsche</string>
    <string name="question_5_a2">Audi</string>
    <string name="question_5_a3">Benz</string>

    <string name="question_6_a1">1 Million</string>
    <string name="question_6_a2">8 Billion</string>
    <string name="question_6_a3">8 Million</string>

    <string name="trivia_a1">Supervised Learning</string>
    <string name="trivia_a2">Deep Learning</string>
    <string name="trivia_a3">Unsupervised Learning</string>

</resources>
